--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,12 @@
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <meta charset="utf-16" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon"
-      type="image/png"
-      href="/public/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#637980">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body class="markdown-body">
     {{content | extlinks:page}}
